# dioxus-motion2

./: .gitignore  Cargo.toml  README.md  project_structure.txt
docs/: Cargo.toml  Dioxus.toml  input.css  justfile
docs/assets/: main.css
docs/src/: lib.rs  main.rs
docs/src/components/: animated_flower.rs  animations.rs  code_block.rs  cube_animation.rs  mod.rs  navbar.rs  page_not_found.rs  page_transition.rs  transformation_example.rs
docs/src/pages/: mod.rs
docs/src/pages/blog/: index.rs
docs/src/pages/docs/: index.rs
docs/src/pages/home/: index.rs
docs/src/utils/: router.rs
example_projects/basic_usage/: Cargo.toml  Dioxus.toml
example_projects/basic_usage/assets/: tailwind.css
example_projects/basic_usage/src/: main.rs
example_projects/basic_usage/src/components/: home.rs  mod.rs  navbar.rs
src/: animatable.rs  animation.rs  color.rs  core.rs  group.rs  keyframe.rs  lib.rs  platform.rs  sequence.rs  spring.rs  stagger.rs  transform.rs  tween.rs
src/animation/: config.rs  mod.rs  state.rs  timing.rs  traits.rs
src/animations/: keyframe.rs  mod.rs  sequence.rs  spring.rs  tween.rs
src/properties/: color.rs  transform.rs
src/traits/: mod.rs
src/transitions/: mod.rs  page_transition.rs  utility.rs
