[package]
name = "dioxus-motion2"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1.41", default-features = false }
easer = { version = "0.3.0", default-features = false }
instant = { version = "0.1.13", optional = true }
tokio = { version = "1.43.0", features = ["time"] }
tokio_with_wasm = "0.8.2"
# For transition
dioxus = { version = "0.6.3", default-features = false, features = ["hooks", "html", "macro", "router", "signals"] }
ordered-float = { version = "5.0.0", default-features = false }


[features]
default = ["web"]
web = ["instant/wasm-bindgen"]
desktop = ["instant"]


[workspace]
members = [".", "example_projects/*"]
resolver = "2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
