[package]
name = "basic_usage"
version = "0.1.0"
authors = ["Sabin Regmi <get2sabin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["asset", "document", "launch"], default-features = false }
dioxus-logger = "0.6.2"
dioxus-motion2 = { path = "../../", default-features = false }
easer = { version = "0.3.0", default-features = false }

[features]
default = ["desktop"]
web = ["dioxus/web", "dioxus-motion2/web"]
desktop = ["dioxus/desktop", "dioxus-motion2/desktop"]
mobile = ["dioxus/mobile"]
